# crypto-payments

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  task_description.md
data/: transactions-1.json  transactions-2.json
migrations/2021-07-28-081212_create_transactions/: up.sql
src/: crypto_transaction.rs  main.rs  models.rs  schema.rs  transactions_importer.rs  transactions_processor.rs
src/crypto_transaction/: importer.rs  processor.rs  repository.rs
