[package]
name = "crypto-payments"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
